<resources>
    <string name="app_name">Let\'sChat</string>

    <string name="register_create_account">Create Account</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_button_text">Register</string>

    <string name="login_member_login">Member Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_no_account_yet_text">Don\'t have an account yet?</string>

    <string name="options_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_user_blank_fragment">Hello blank User fragment</string>
    <string name="hello_chats_blank_fragment">Hello blank Chats fragment</string>
    <string name="right_chat_hello">Hello</string>
    <string name="left_chat_hello">Hello</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_username">Hello</string>
    <string name="search_string">Search</string>
    <string name="seen_text">seen</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="login">login</string>
    <string name="reset">Reset</string>
    <string name="reset_text">By Clicking on reset, you will receive email with password reset link</string>
</resources>
