<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/tool_bar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_toolbar"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/login_member_login"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_shape_edittext"
            android:drawableStart="@drawable/ic_email_gray_24dp"
            android:drawableLeft="@drawable/ic_email_gray_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_shape_edittext"
            android:drawableStart="@drawable/ic_lock_gray_24dp"
            android:drawableLeft="@drawable/ic_lock_gray_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textSize="14sp"
            android:layout_gravity="end"/>

        <Button
            android:id="@+id/login_button_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_shape_button"
            android:text="@string/login_button_text"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_no_account_yet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/login_no_account_yet_text"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>