<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.RegisterActivity">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_toolbar"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/register_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_create_account"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_shape_edittext"
            android:drawableStart="@drawable/ic_person_gray_24dp"
            android:drawableLeft="@drawable/ic_person_gray_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/register_username"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_shape_edittext"
            android:drawableStart="@drawable/ic_email_gray_24dp"
            android:drawableLeft="@drawable/ic_email_gray_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_shape_edittext"
            android:drawableStart="@drawable/ic_lock_gray_24dp"
            android:drawableLeft="@drawable/ic_lock_gray_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <Button
            android:id="@+id/register_button_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/round_shape_button"
            android:text="@string/register_button_text"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

</RelativeLayout>