<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Authentication.ResetPasswordActivity">

    <include
        android:id="@+id/reset_toolbar"
        layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/please_enter_your_email"/>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_shape_button"
            android:layout_margin="8dp"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="18sp"
            android:text="@string/reset"/>

        <TextView
            android:id="@+id/reset_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:text="@string/reset_text"/>

    </LinearLayout>

</LinearLayout>